Fixed overflow problem for checkboxes.

--- a/pyrene/src/components/FormElements/Checkbox/checkbox.css
+++ b/pyrene/src/components/FormElements/Checkbox/checkbox.css
@@ -22,7 +22,6 @@
   height: 24px;
   font-size: 14px;
   font-weight: normal;
-  line-height: 1.71;
   text-transform: capitalize;
   cursor: pointer;
 
